[gd_scene load_steps=8 format=3 uid="uid://bkhmnm3g5j3or"]

[ext_resource type="Script" uid="uid://c2j8813dwp4am" path="res://Script/total_count.gd" id="1_hly68"]
[ext_resource type="Script" uid="uid://b2je4mdvr8qlv" path="res://Script/game_world.gd" id="1_mcbma"]
[ext_resource type="Texture2D" uid="uid://e881gr8bd0ay" path="res://texture/Ë¥≠‰π∞ÁªèÈ™åÂÄº.png" id="2_ea1x0"]
[ext_resource type="Texture2D" uid="uid://ddwucgbgfhvno" path="res://texture/Ë¥≠‰π∞ÁªèÈ™åÂÄº_pressed.png" id="3_e08lw"]
[ext_resource type="PackedScene" uid="uid://casw78v338ltq" path="res://item/basketball.tscn" id="4_e08lw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ea1x0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e08lw"]
bg_color = Color(0.23361677, 0.48453373, 0.656316, 1)

[node name="GameWorld" type="Node2D" node_paths=PackedStringArray("total_count")]
script = ExtResource("1_mcbma")
total_count = NodePath("TotalCount")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="TotalCount" type="RichTextLabel" parent="." node_paths=PackedStringArray("rate_label", "buy_EXP_need_label", "exp_progress_label", "exp_progress_bar")]
offset_right = 1919.0
offset_bottom = 1080.0
mouse_filter = 1
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 256
theme_override_font_sizes/bold_font_size = 256
theme_override_font_sizes/bold_italics_font_size = 256
theme_override_font_sizes/italics_font_size = 256
theme_override_font_sizes/mono_font_size = 256
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_hly68")
rate_label = NodePath("../RateRichTextLabel")
buy_EXP_need_label = NodePath("../TextureButton/Label")
exp_progress_label = NodePath("../TextureButton/ProgressBar/Label")
exp_progress_bar = NodePath("../TextureButton/ProgressBar")

[node name="RateRichTextLabel" type="RichTextLabel" parent="."]
offset_right = 1920.0
offset_bottom = 102.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
bbcode_enabled = true
text = "üé≤ [color=green]10% +2 [/color]| [color=cyan]5% +4[/color]"
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 1486.0
offset_top = 910.0
offset_right = 1875.333
offset_bottom = 1054.667
texture_normal = ExtResource("2_ea1x0")
texture_pressed = ExtResource("3_e08lw")
texture_hover = ExtResource("3_e08lw")
texture_disabled = ExtResource("3_e08lw")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureButton"]
layout_mode = 0
offset_left = 17.0
offset_top = 77.0
offset_right = 220.0
offset_bottom = 100.0
text = "ÈúÄË¶ÅÔºö100 "

[node name="ProgressBar" type="ProgressBar" parent="TextureButton"]
layout_mode = 0
offset_left = 13.0
offset_top = 118.0
offset_right = 338.0
offset_bottom = 133.0
theme_override_styles/background = SubResource("StyleBoxFlat_ea1x0")
theme_override_styles/fill = SubResource("StyleBoxFlat_e08lw")
value = 22.82
show_percentage = false

[node name="Label" type="Label" parent="TextureButton/ProgressBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 326.0
offset_bottom = 11.5
grow_vertical = 2

[node name="Basketball" parent="." instance=ExtResource("4_e08lw")]
position = Vector2(997, -472)

[connection signal="gui_input" from="TotalCount" to="TotalCount" method="_on_gui_input"]
[connection signal="mouse_entered" from="TotalCount" to="TotalCount" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TotalCount" to="TotalCount" method="_on_mouse_exited"]
[connection signal="button_down" from="TextureButton" to="TotalCount" method="_on_level_up_button_down"]
[connection signal="button_up" from="TextureButton" to="TotalCount" method="_on_level_up_button_button_up"]
[connection signal="pressed" from="TextureButton" to="TotalCount" method="buy_EXP"]
