extends RichTextLabel

# é¢„åŠ è½½æµ®åŠ¨æ•°å­—åœºæ™¯
var floating_number_screen := preload("res://floating_number.tscn")
# æŒç»­ç‚¹å‡»å®šæ—¶å™¨ï¼ˆæ§åˆ¶0.1ç§’è§¦å‘ä¸€æ¬¡ç‚¹æ•°å¢åŠ ï¼‰
var click_timer: Timer
# ========== æ–°å¢ï¼šå‡çº§æŒ‰é’®ç›¸å…³å®šæ—¶å™¨ ==========
var buy_exp_timer: Timer  # æ§åˆ¶æ¯0.2ç§’å°è¯•è´­ä¹°ç»éªŒ
var long_press_timer: Timer  # æ£€æµ‹æ˜¯å¦æŒç»­æŒ‰å‹æ»¡2ç§’ï¼ˆé˜²çŸ­æŒ‰è¯¯è§¦å‘ï¼‰

@export var rate_label : RichTextLabel
@export var buy_EXP_need_label : Label
@export var exp_progress_label : Label
@export var exp_progress_bar : ProgressBar  # ç»éªŒè¿›åº¦æ¡

# åˆå§‹åŒ–éšæœºæ•°ç§å­ + å®šæ—¶å™¨
func _ready() -> void:
	randomize()
	# åˆå§‹åŒ–æŒç»­ç‚¹å‡»å®šæ—¶å™¨ï¼ˆåŠ ç‚¹æ•°ï¼‰
	click_timer = Timer.new()
	click_timer.wait_time = 0.2  # 0.2ç§’è§¦å‘ä¸€æ¬¡
	click_timer.one_shot = false  # å¾ªç¯è§¦å‘ï¼ˆéä¸€æ¬¡æ€§ï¼‰
	click_timer.timeout.connect(_on_click_timer_timeout)  # ç»‘å®šè¶…æ—¶å›è°ƒ
	add_child(click_timer)  # å°†å®šæ—¶å™¨åŠ å…¥èŠ‚ç‚¹æ ‘
	
	# ========== åˆå§‹åŒ–è´­ä¹°ç»éªŒå®šæ—¶å™¨ ==========
	buy_exp_timer = Timer.new()
	buy_exp_timer.wait_time = 0.2  # æ¯0.2ç§’å°è¯•è´­ä¹°ä¸€æ¬¡
	buy_exp_timer.one_shot = false  # å¾ªç¯è§¦å‘
	buy_exp_timer.timeout.connect(_on_buy_exp_timer_timeout)  # ç»‘å®šè´­ä¹°å›è°ƒ
	add_child(buy_exp_timer)  # åŠ å…¥èŠ‚ç‚¹æ ‘
	
	# ========== æ–°å¢ï¼šåˆå§‹åŒ–é•¿æŒ‰æ£€æµ‹å®šæ—¶å™¨ï¼ˆ2ç§’ï¼‰ ==========
	long_press_timer = Timer.new()
	long_press_timer.wait_time = 0.8  # éœ€æŒç»­æŒ‰å‹2ç§’æ‰è§¦å‘
	long_press_timer.one_shot = true  # ä¸€æ¬¡æ€§å®šæ—¶å™¨ï¼ˆä»…è§¦å‘ä¸€æ¬¡ï¼‰
	long_press_timer.timeout.connect(_on_long_press_timeout)  # é•¿æŒ‰è¶…æ—¶å›è°ƒ
	add_child(long_press_timer)
	
	# åˆå§‹åŒ–æ˜¾ç¤º
	update_buy_need_label()
	update_rate_label()
	update_exp_progress_label()

# ========== å®šæ—¶å™¨å›è°ƒï¼ˆæ¯0.1ç§’è§¦å‘ä¸€æ¬¡ç‚¹æ•°å¢åŠ ï¼‰ ==========
func _on_click_timer_timeout() -> void:
	# è·å–å½“å‰é¼ æ ‡ç›¸å¯¹äºæœ¬èŠ‚ç‚¹çš„ä½ç½®ï¼ˆé€‚é…ControlèŠ‚ç‚¹åæ ‡ï¼‰
	var current_mouse_pos = get_local_mouse_position()
	AudioManager.play_SFX(GameData.clicked_sound)
	# è°ƒç”¨ç‚¹æ•°å¢åŠ é€»è¾‘
	add_number(current_mouse_pos)

# ========== è´­ä¹°ç»éªŒå®šæ—¶å™¨å›è°ƒï¼ˆæ¯0.2ç§’å°è¯•è´­ä¹°ï¼‰ ==========
func _on_buy_exp_timer_timeout() -> void:
	# ç›´æ¥è°ƒç”¨è´­ä¹°ç»éªŒå‡½æ•°
	buy_EXP()

# ========== æ–°å¢ï¼šé•¿æŒ‰2ç§’è¶…æ—¶å›è°ƒï¼ˆè§¦å‘è¿ç»­è´­ä¹°ï¼‰ ==========
func _on_long_press_timeout() -> void:
	# é•¿æŒ‰æ»¡2ç§’ï¼šå…ˆæ‰§è¡Œä¸€æ¬¡è´­ä¹°ï¼Œå†å¯åŠ¨è¿ç»­è´­ä¹°å®šæ—¶å™¨
	buy_EXP()
	buy_exp_timer.start()
	print("ğŸ”„ å·²æŒç»­æŒ‰å‹2ç§’ï¼Œå¼€å§‹è‡ªåŠ¨å‡çº§ï¼ˆæ¯0.2ç§’ä¸€æ¬¡ï¼‰")

# ========== æ ¸å¿ƒï¼šåŠ¨æ€è®¡ç®—å½“å‰å¥–åŠ±æ¦‚ç‡ï¼ˆéšç»éªŒ/ç­‰çº§å˜åŒ–ï¼‰ ==========
func _get_current_reward_rates() -> Dictionary:
	# 1. è·å–å½“å‰ç­‰çº§çš„åŸºç¡€æ¦‚ç‡
	var level = min(GameData.player_level, len(GameData.level_base_rates) - 1)
	var base_rates = GameData.level_base_rates[level]
	var rate_1 = base_rates[0]
	var rate_2 = base_rates[1]
	var rate_max = base_rates[2]
	# 2. æ ¹æ®å½“å‰ç»éªŒå€¼æå‡æ¦‚ç‡ï¼ˆå°å¹…ï¼‰
	var Exp = GameData.player_EXP
	# æ¯1ç‚¹ç»éªŒï¼Œ+2æ¦‚ç‡+0.05%ï¼Œ+maxæ¦‚ç‡+0.03%ï¼Œ+1æ¦‚ç‡ç­‰é¢å‡å°‘
	var rate_2_add = Exp * 0.0005  # 0.05% = 0.0005
	var rate_max_add = Exp * 0.0003 # 0.03% = 0.0003
	rate_2 += rate_2_add
	rate_max += rate_max_add
	rate_1 -= (rate_2_add + rate_max_add)
	# 3. æ¦‚ç‡è¾¹ç•Œä¿æŠ¤ï¼ˆé¿å…+1æ¦‚ç‡è¿‡ä½ï¼Œæ¸¸æˆä½“éªŒå·®ï¼‰
	rate_1 = max(rate_1, 0.5)  # +1æ¦‚ç‡æœ€ä½50%
	# é‡æ–°å½’ä¸€åŒ–ï¼ˆé˜²æ­¢æ¦‚ç‡æ€»å’Œè¶…å‡º1ï¼‰
	var total = rate_1 + rate_2 + rate_max
	rate_1 /= total
	rate_2 /= total
	rate_max /= total
	# 4. è·å–å½“å‰ç­‰çº§çš„æœ€å¤§å¥–åŠ±å€¼
	var max_reward = GameData.reward_max_values[level]
	
	return {
		"1": rate_1,
		"2": rate_2,
		str(max_reward): rate_max,
		"max_value": max_reward
	}

# ========== éšæœºè·å–å¥–åŠ±ï¼ˆæ›¿ä»£åŸå›ºå®šåˆ—è¡¨ï¼‰ ==========
func _get_random_reward() -> Dictionary:
	var rates = _get_current_reward_rates()
	var max_value = rates["max_value"]
	var total_prob = 0.0
	
	# æ„å»ºå¥–åŠ±åˆ—è¡¨ï¼ˆåŠ¨æ€ï¼‰
	var reward_list = [
		{"value": 1, "prob": rates["1"], "color": "#FFFFFF"},
		{"value": 2, "prob": rates["2"], "color": "green"},
		{"value": max_value, "prob": rates[str(max_value)], "color": "cyan"}
	]
	
	# æ¦‚ç‡éšæœºé€‰æ‹©ï¼ˆé€»è¾‘åŒä¹‹å‰ï¼‰
	for reward in reward_list:
		total_prob += reward.prob
	var random_num = randf() * total_prob
	var current_prob = 0.0
	
	for reward in reward_list:
		current_prob += reward.prob
		if random_num <= current_prob:
			return reward
	# å…œåº•
	return {"value": 1, "color": "#FFFFFF"}

# ========== ç‚¹å‡»/æŒç»­æŒ‰å‹æ·»åŠ æ•°å­—ï¼ˆä¿®å¤æ ¸å¿ƒé”™è¯¯ï¼‰ ==========
func _on_gui_input(event: InputEvent) -> void:
	if event is InputEventMouseButton and event.button_index == MOUSE_BUTTON_LEFT:
		# ä¿®å¤ï¼šç”¨is_pressed()åˆ¤æ–­æŒ‰ä¸‹ï¼Œè€Œéevent.pressed
		if event.is_pressed():
			AudioManager.play_SFX(GameData.clicked_sound)
			add_number(event.position)
			click_timer.start()  # å¯åŠ¨0.1ç§’å¾ªç¯å®šæ—¶å™¨
		# ä¿®å¤ï¼šç”¨is_released()åˆ¤æ–­é‡Šæ”¾ï¼Œè€Œéevent.released
		elif event.is_released():
			click_timer.stop()  # åœæ­¢è‡ªåŠ¨åŠ ç‚¹æ•°

func add_number(pos:Vector2)->void:
	var reward = _get_random_reward()
	var reward_value = reward.value
	var reward_color = reward.color
	
	# æ›´æ–°æ€»è®¡æ•°
	GameData.total_count += reward_value
	self.text = str(GameData.total_count)
	
	# åˆ›å»ºæµ®åŠ¨æ•°å­—ï¼ˆæ–°å¢è‡ªåŠ¨é”€æ¯ï¼Œé¿å…å†…å­˜æ³„æ¼ï¼‰
	var float_number = floating_number_screen.instantiate()
	float_number.text = "[color=%s]+%d[/color]" % [reward_color, reward_value]
	float_number.bbcode_enabled = true
	float_number.position = pos
	var target_position = pos + Vector2(0, -250)  # å‘ä¸Šé£˜
	add_child(float_number)
	
	# åŠ¨ç”»è¡¥é—´
	var move_tween = create_tween()
	move_tween.parallel()
	move_tween.tween_property(float_number, "position", target_position, 0.5)
	move_tween.set_trans(Tween.TRANS_SINE).set_ease(Tween.EASE_IN)
	move_tween.tween_property(float_number,"modulate:a",0,0.2)
	move_tween.finished.connect(func():
		float_number.queue_free()  # åŠ¨ç”»ç»“æŸé”€æ¯èŠ‚ç‚¹
	)

# ========== ç”Ÿæˆæ¶ˆè€—æ•°å€¼çš„æµ®åŠ¨åŠ¨ç”» ==========
func create_cost_float_number(cost: int) -> void:
	# å›ºå®šç”Ÿæˆä½ç½®ï¼šå±å¹•ä¸­é—´(960,540)
	var spawn_pos = Vector2(960, 540)
	# ç›®æ ‡ä½ç½®ï¼šå‘ä¸‹é£˜150åƒç´ 
	var target_pos = spawn_pos + Vector2(0, 150)
	
	# åˆ›å»ºæµ®åŠ¨æ•°å­—èŠ‚ç‚¹
	var cost_float = floating_number_screen.instantiate()
	# çº¢è‰²å‡å·æ–‡æœ¬ï¼ŒBBcodeè®¾ç½®é¢œè‰²
	cost_float.text = "[color=#FF4444]-%d[/color]" % cost
	cost_float.bbcode_enabled = true
	cost_float.position = spawn_pos
	add_child(cost_float)
	
	# å‘ä¸‹é£˜åŠ¨+æ¸éšåŠ¨ç”»ï¼ˆå’Œå¥–åŠ±æ•°å­—åŠ¨ç”»é£æ ¼ç»Ÿä¸€ï¼‰
	var cost_tween = create_tween()
	cost_tween.parallel()
	cost_tween.tween_property(cost_float, "position", target_pos, 0.5)
	cost_tween.set_trans(Tween.TRANS_SINE).set_ease(Tween.EASE_IN)
	cost_tween.tween_property(cost_float, "modulate:a", 0, 0.2)
	cost_tween.finished.connect(func():
		cost_float.queue_free()  # åŠ¨ç”»ç»“æŸé”€æ¯ï¼Œé¿å…å†…å­˜æ³„æ¼
	)

# ========== å‡çº§ç³»ç»Ÿæ ¸å¿ƒåŠŸèƒ½ ==========
# æ›´æ–°è´­ä¹°ç»éªŒæ‰€éœ€ç‚¹æ•°æ˜¾ç¤º
func update_buy_need_label()->void:
	var cost = GameData.get_buy_exp_cost()
	buy_EXP_need_label.text = "éœ€è¦: %d ç‚¹æ•°" % cost

# æ›´æ–°ç»éªŒè¿›åº¦æ˜¾ç¤ºï¼ˆå«è¿›åº¦æ¡ï¼‰
func update_exp_progress_label()->void:
	var current_exp = GameData.player_EXP
	var exp_cap = GameData.get_current_exp_cap()
	# æ›´æ–°æ–‡æœ¬
	exp_progress_label.text = "ç»éªŒè¿›åº¦ï¼š%d/%dï¼ˆç­‰çº§%dï¼‰" % [current_exp, exp_cap, GameData.player_level]
	# æ›´æ–°è¿›åº¦æ¡ï¼ˆå…³é”®ï¼šè®¾ç½®æœ€å¤§å€¼å’Œå½“å‰å€¼ï¼‰
	exp_progress_bar.max_value = exp_cap
	exp_progress_bar.value = current_exp

# æ›´æ–°æ¦‚ç‡æ˜¾ç¤ºï¼ˆåŠ¨æ€å±•ç¤ºå½“å‰æ¦‚ç‡ï¼‰
func update_rate_label()->void:
	var rates = _get_current_reward_rates()
	var max_value = rates["max_value"]
	# æ¦‚ç‡è½¬ç™¾åˆ†æ¯”ï¼Œä¿ç•™1ä½å°æ•°
	var rate_2 = round(rates["2"] * 1000) / 10
	var rate_max = round(rates[str(max_value)] * 1000) / 10
	rate_label.text = "ğŸ² [color=green]%.1f%% +2 [/color]| [color=cyan]%.1f%% +%d[/color]" % [rate_2, rate_max, max_value]

# è´­ä¹°ç»éªŒï¼ˆæ ¸å¿ƒé€»è¾‘ï¼šæ–°å¢æ¶ˆè€—æ•°å€¼åŠ¨ç”»ï¼‰
func buy_EXP() -> void:
	# 1. è·å–æ¶ˆè€—ç‚¹æ•°
	var cost = GameData.get_buy_exp_cost()
	# 2. æ£€æŸ¥ç‚¹æ•°æ˜¯å¦è¶³å¤Ÿ
	if GameData.total_count < cost:
		print("âŒ ç‚¹æ•°ä¸è¶³ï¼éœ€è¦", cost, "ç‚¹æ•°")
		return
	# 3. ç”Ÿæˆæ¶ˆè€—æ•°å€¼æµ®åŠ¨åŠ¨ç”»ï¼ˆæ ¸å¿ƒæ–°å¢ï¼‰
	create_cost_float_number(cost)
	# 4. æ¶ˆè€—ç‚¹æ•°ï¼Œå¢åŠ ç»éªŒ
	GameData.total_count -= cost
	GameData.player_EXP += 1
	AudioManager.play_SFX(GameData.buy_EXP_sound)
	self.text = str(GameData.total_count)  # æ›´æ–°æ€»ç‚¹æ•°æ˜¾ç¤º
	# 5. æ£€æŸ¥æ˜¯å¦å‡çº§
	if GameData.player_EXP >= GameData.get_current_exp_cap():
		GameData.level_up()
	# 6. æ›´æ–°æ‰€æœ‰æ˜¾ç¤ºï¼ˆå«è¿›åº¦æ¡ï¼‰
	update_buy_need_label()
	update_exp_progress_label()
	update_rate_label()

func _on_mouse_entered() -> void:
	pass

func _on_mouse_exited() -> void:
	# åœæ­¢åŠ ç‚¹æ•°å®šæ—¶å™¨
	click_timer.stop()
	# åœæ­¢å‡çº§ç›¸å…³æ‰€æœ‰å®šæ—¶å™¨ï¼ˆé˜²è¯¯è§¦å‘ï¼‰
	buy_exp_timer.stop()
	long_press_timer.stop()
	print("ğŸš« é¼ æ ‡ç§»å‡ºï¼Œå·²åœæ­¢æ‰€æœ‰è‡ªåŠ¨æ“ä½œ")
	pass

# ========== ä¿®æ”¹ï¼šå‡çº§æŒ‰é’®æŒ‰å‹/é‡Šæ”¾é€»è¾‘ï¼ˆé˜²çŸ­æŒ‰è¯¯è§¦å‘ï¼‰ ==========
func _on_level_up_button_down() -> void:
	# æŒ‰é’®æŒ‰ä¸‹ï¼šä»…å¯åŠ¨é•¿æŒ‰æ£€æµ‹å®šæ—¶å™¨ï¼ˆæ— ç«‹å³è´­ä¹°ï¼‰
	long_press_timer.start()
	print("â³ é•¿æŒ‰æ£€æµ‹ä¸­ï¼ˆéœ€2ç§’è§¦å‘è‡ªåŠ¨å‡çº§ï¼‰")

func _on_level_up_button_button_up() -> void:
	# æŒ‰é’®é‡Šæ”¾ï¼šåœæ­¢æ‰€æœ‰å‡çº§ç›¸å…³å®šæ—¶å™¨
	long_press_timer.stop()
	buy_exp_timer.stop()
	print("ğŸ›‘ å·²é‡Šæ”¾æŒ‰é’®ï¼Œåœæ­¢è‡ªåŠ¨å‡çº§")
